--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"lint": "turbo run lint",
 		"test": "turbo run test",
 		"prepare": "husky",
-		"format": "turbo run format"
+		"format": "turbo run format",
+		"start": "next start"
 	},
 	"devDependencies": {
 		"@types/prismjs": "^1.26.5",
